[FileAPI] Synchronously terminate loader when abort is called().

Otherwise loads started right after calling abort() won't work.

Also simplify the watching logic in MojoBlobReader, to prevent hitting
DCHECKs in OnResponseBodyStreamReady.

Bug: 835928
Change-Id: I45eec517ccaf5f830101b6a02fce2fdcf696d17b
Reviewed-on: https://chromium-review.googlesource.com/1024315
Commit-Queue: Marijn Kruisselbrink <mek@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553204}
Former-commit-id: 6c75fd3d1679f09efb95ea486cb26f3d13431b92